Rafactor(Report) : ReportService가 Presentation DTO 대신 Application DTO(Info)를 반환하도록 수정 (의존성 역전 해결) 및 ReportController로 DTO 매핑 로직 이동